# dhis2-python-client

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
examples/: _config.py  example_1_org_unit_fetch.py  example_2_geojson_fetch.py  example_3_data_element_fetch.py  example_4_data_element_create.py  example_5_zero_to_data.py  example_6_analytics_start.py  example_7_fetch_latest_data.py
src/dhis2_client/: __init__.py  _base.py  async_client.py  client.py  errors.py  exceptions.py  logging.py  logging_conf.py  paging.py  settings.py  sync_client.py
src/dhis2_client/cli/: __init__.py  app.py  common.py  http.py  main.py  output.py  periods.py  system.py  types.py  utils.py
src/dhis2_client/cli/resources/: bulk.py  data_value_sets.py  data_values.py  metadata.py  users.py
src/dhis2_client/models/: __init__.py  collections.py  common.py  data_element.py  data_set.py  data_value.py  data_value_set.py  organisation_unit.py  periods.py  system.py
src/dhis2_client/resources/: __init__.py  analytics.py  base.py  data_elements.py  data_sets.py  data_values.py  organisation_units.py  sharing.py  system.py  users.py
src/dhis2_client/utils/: calendar.py  utils.py
tests/: conftest.py  test_analytics.py  test_calendar_utils.py  test_client_core.py  test_data_elements.py  test_data_sets.py  test_data_values.py  test_logging.py  test_org_units.py  test_org_units_geojson.py  test_sharing.py  test_system.py  test_users.py  test_users_scope.py  tests_cli_basic.py
tests/fixtures/: data_value.json  data_value_set.json
tests/integration/: _env.py  _helpers.py  conftest.py  test_live_catalog.py  test_live_data_values.py  test_live_endpoints.py  test_live_full_stack.py  test_live_mutations.py  test_live_read.py
tests/payload/: metadata_seed.json
tests/unit/: test_end_points_mixed_imports.py  test_endpoints.py  test_endpoints_sync.py  test_models.py  test_paging.py  test_periods.py
