[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhis2-client"
version = "0.2.0"
description = "Async DHIS2 Web API client with Pydantic v2 and structured logging"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "dhis2-client" }]
keywords = ["dhis2", "async", "httpx", "pydantic"]
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "python-dotenv>=1.0",
]

[project.scripts]
dhis2-client = "dhis2_client.cli.app:app"

[project.optional-dependencies]
cli = [
  "typer>=0.12",
  "rich>=13",
  "pyyaml>=6",
]
test = ["pytest>=8.2,<9", "pytest-asyncio>=0.23", "respx>=0.21", "coverage[toml]>=7"]
dev  = ["pre-commit==3.5.0", "ruff>=0.5.7", "black>=24.3", "mypy>=1.10"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"