[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhis2-client"
version = "0.3.0"
description = "Synchronous DHIS2 Web API client: dict/JSON in–out, logging, paging, and core resources."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "HISP UiO" }]
dependencies = [
    "httpx>=0.27",
    "convertdate>=2.4",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6.0"]
